Fixed persistent arrow and extra margins

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -17,7 +17,7 @@
 body {
   font-family: $sans-serif-stack; 
   font-size: $basefont;
-  margin: 0 auto;
+  margin: 0;
 }
 
 ul li,
